@@ -26,7 +26,6 @@ import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Iterator;
 import java.util.NoSuchElementException;
 
@@ -116,22 +115,6 @@ public class InternalCachedBag extends SelfSpillBag {
         numTuplesSpilled = 0;
     }
 
-    @Override
-    public void addAll(DataBag b) {
-    	Iterator<Tuple> iter = b.iterator();
-    	while(iter.hasNext()) {
-    		add(iter.next());
-    	}
-    }
-
-    @Override
-    public void addAll(Collection<Tuple> c) {
-    	Iterator<Tuple> iter = c.iterator();
-    	while(iter.hasNext()) {
-    		add(iter.next());
-    	}
-    }
-    
     private void addDone() {
         if(out != null) {
             try {
@@ -145,6 +128,7 @@ public class InternalCachedBag extends SelfSpillBag {
         if(numTuplesSpilled > 0)
             updateSpillRecCounter();
         addDone = true;
+        markSpillableIfNecessary();
     }
 
     @Override
