@@ -17,6 +17,8 @@
  */
 package org.apache.pig.test;
 
+import static org.junit.Assert.*;
+
 import java.util.*;
 import java.io.DataInputStream;
 import java.io.DataOutputStream;
@@ -24,20 +26,22 @@ import java.io.IOException;
 import java.io.PipedInputStream;
 import java.io.PipedOutputStream;
 
-import org.junit.Test;
+
 import org.apache.pig.data.*;
 import org.apache.pig.impl.util.Spillable;
+import org.junit.After;
+import org.junit.Test;
 
 
 /**
  * This class will exercise the basic Pig data model and members. It tests for proper behavior in
- * assigment and comparision, as well as function application.
+ * assignment and comparison, as well as function application.
  * 
  * @author dnm
  */
-public class TestDataBag extends junit.framework.TestCase {
+public class TestDataBag  {
 
-    private Random rand = new Random();
+    private Random rand = new Random(111);
 
     private class TestMemoryManager {
         ArrayList<Spillable> mManagedObjects = new ArrayList<Spillable>();
@@ -47,8 +51,9 @@ public class TestDataBag extends junit.framework.TestCase {
         }
 
         public void forceSpill() throws IOException {
-            Iterator<Spillable> i = mManagedObjects.iterator();
-            while (i.hasNext()) i.next().spill();
+            for (Spillable spillable : mManagedObjects) {
+                spillable.spill();
+            }
         }
     }
 
@@ -80,8 +85,8 @@ public class TestDataBag extends junit.framework.TestCase {
         }
     }
 
-    @Override
-    protected void tearDown() throws Exception {
+    @After
+    public void tearDown() throws Exception {
     	BagFactory.resetSelf();
         System.clearProperty("pig.data.bag.factory.name");
         System.clearProperty("pig.data.bag.factory.jar");
@@ -586,7 +591,7 @@ public class TestDataBag extends junit.framework.TestCase {
             mgr.forceSpill();
         }
         
-        assertEquals("Size of distinct data bag is incorrect", b.size(), rightAnswer.size());
+       assertEquals("Size of distinct data bag is incorrect", rightAnswer.size(), b.size());
 
         // Read tuples back, hopefully they come out in the same order.
         Iterator<Tuple> bIter = b.iterator();
